resource: temp playingcards

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-######### Default gitingore #########
+######### Custom gitignore
+Assets/99.Packages/
+
+######### Default gitignore #########
 # Created by https://www.toptal.com/developers/gitignore/api/unity,csharp
 # Edit at https://www.toptal.com/developers/gitignore?templates=unity,csharp
 
